vlib/v/checker/tests/const_expr_match_range_invalid_err.out
vlib/v/checker/tests/const_expr_match_range_invalid_err.vv:9:2: error: the low and high parts of a range expression, should have matching types
    7 |         println(start)
    8 |     }
    9 |     'str'...end {
      |     ~~~~~~~~~~~
   10 |         println(end)
   11 |     }
Details: 
 low part type: string
high part type: int literal
